fix(user): fixed a mobile layout issue where selection cards are not really centered

--- a/src/styles/UserPage.module.css
+++ b/src/styles/UserPage.module.css
@@ -1,10 +1,10 @@
 @media (max-width: 414px) {
   .selectionCardsArea {
     margin: 0;
-    padding-left: 60px;
     display: flex;
     flex-direction: column;
     gap: 50px;
     padding-bottom: 100px;
+    align-items: center;
   }
 }
